import { Stack } from 'expo-router';

export default function BreedsLayout() {
  return (
    <Stack
      screenOptions={{
        headerBackTitle: 'Back',
        headerTintColor: '#f97316',
      }}
    />
  );
}
